# dmr_c

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
asmjit-backend/: README.md  asmjitbackend.c  main.cpp  sparse-asmjit.cpp
asmjit-backend/tests/: empty.c  ret0.c
cmake/: FindNanoJIT.cmake  FindOMRJIT.cmake
docs/: README.md  instructions.md  sparse-internals.md
llvm/: sparse-llvm.c
llvm-backend/: dmr_c_llvm.h  llvmbackend.c  sparse-llvm.c
nanojit-backend/: README.md  dmr_c.h  nanobackend.c  sparse-nanojit.c  sparse-nanojit.cpp  testnanobackend.c
omrjit-backend/: README.md  omrbackend.c  sparse-omrjit.c  testomrbackend.c
samples/: show-linearize.c  show-parse.c  show-parsetree.c  show-symbols.c
sparse/: sparse.c
src/: README.md  allocate.c  allocate.h  builtin.c  char.c  char.h  cse.c  dmr_c.c  dmr_c.h  evaluate.c  expand.c  expression.c  expression.h  flow.c  flow.h  inline.c  lib.c  lib.h  linearize.c  linearize.h  liveness.c  memops.c  parse.c  parse.h  port.h  pre-process.c  ptrlist.c  ptrlist.h  ptrmap.c  ptrmap.h  runtests.c  scope.c  scope.h  show-parse.c  simplify.c  sparse.c  ssa.c  ssa.h  symbol.c  symbol.h  (+7 more)
tests/: README.md  pseudoval1.c  ptraddassign1.c  ptraddassign2.c  runomrtests.py  runtests.py
tests/8cc/: README.md  assign.c  bitop.c  cast.c  comp.c  control.c  initializer.c  pointer.c  struct.c  typeof.c  union.c  usualconv.c
tests/8cc/inc/: testmain.c
tests/avltree/: README.md  alloc.c  alloc.h  avl3.h  avl3a.c  avl3b.c  avl3int.h  expect  main.c  run.sh  runtests.sh  test.c  test.c.ll  test.expect  test.lin  test.ll
tests/bugs/: README.md  bitfield.c  chararray.c  cq3.c  floatarith.c  loadstore.c  simplifybug.c  simplifybug.lin  simplifybug_O1.lin  simplifybug_new.lin  simplifybug_old.lin  stdarg.lin
tests/eic/: README.md  expect  gnu17.c  gnu17.lin  gnu17.ll  runtests.sh  testcbrt.c  testcbrt.lin  testcbrt.ll  testinit1.c  testinit1.lin  testinit1.ll
tests/gcc/: 900409-1.c  README.md  alias-1.c  align-2.c  arith-1.c  arith-rand-ll.c  bf-layout-1.c  bf-sign-1.c  bitfld-1.c  ifcvt-onecmpl-abs-1.c  loop-1.c  loop-2.c  pr15262-1.c  pr15262.c  pr16790-1.c  pr17078-1.c  pr20466-1.c  pr21331.c  struct-aliasing-1.c
tests/lacc-tests/: anonymous-members.c.expect  anonymous-struct.c.expect  array-decay.c.expect  array-param.c.expect  array-registers.c.expect  array-zero-length.c.expect  assign-deref-float.c.expect  bitfield-basic.c.expect  bitfield-immediate-assign.c.expect  bitfield-immediate-bitwise.c.expect  bitfield-initialize-zero.c.expect  bitfield-load.c.expect  bitfield-mask.c.expect  bitfield-pack-next.c.expect  bitfield-packing.c.expect  bitfield-reset-align.c.expect  bitfield-trailing-zero.c.expect  bitfield-types-init.c.expect  bitfield-types.c.expect  bitfield.c.expect  bitwise-sign-extend.c.expect  cast-float-union.c.expect  cast-function-args.c.expect  cast-immediate-truncate.c.expect  comma-side-effects.c.expect  comment.c.expect  compare.c.expect  conditional.c.expect  constant-integer-type.c.expect  convert-float-int.c.expect  convert-float-unsigned.c.expect  convert-unsigned-float.c.expect  declarator-abstract.c.expect  deref-compare-float.c.expect  deref-store.c.expect  duffs-device.c.expect  float-arithmetic.c.expect  float-compare-nan.c.expect  float-function.c.expect  for-empty-expr.c.expect  (+51 more)
tests/lacc-tests/c11/: alignof.c.expect
tests/lacc-tests/c99/: __func__.c.expect  bool.c.expect  compund-literal.c.expect  designator-array.c.expect  designator-struct.c.expect  designator-union.c.expect  flexible-array-arg.c.expect  flexible-array.c.expect  flexible-union.c.expect  for-declaration.c.expect  initialize-compound.c.expect  initialize-object.c.expect  line-comment.c.expect  (+12 more)
tests/lcc/: README.md  cq.c  cq.expect  cq.lin  cq.ll  cq_preprocessed.c  expect  runtests.sh
tests/minilua/: README.md  hello.lua  minilua.c  minilua.h  minilua.lin  minilua.ll  minilua.llvmerrors  minilua.llvmir  minilua_opt.lin  minilua_opt_sss.lin  minilua_preprocessed.c  miniluav.c  run.sh
tests/nano/: bitfields.c  bitfields.lin  bitfields.lir  bool.c  bool.lin  bool.lir  calls.c  control.c  control.lin  control.lir  controlbug.c  controlbug.lir  controlbug2.c  controlbug2.lir  locals.c  locals.lin  locals.lir  matmul.c  matmul.lin  matmul.lir  sieve.c  store.c  store.lin  store.lir  strlen.c  strlen.lin  strlen.lir  strlen_paramliveness.lir  sumq.c  sumq.lin  sumq.lir  switch.c  switch.lin  switch.lir  testif.c  testif.lin  testif.lir
tests/netlib/: README.md  expect  paranoia.c  paranoia.expect  paranoia.lin  paranoia.ll  run.sh  runtests.sh
tests/omrjit/: README.md  bitfields.c  bool.c  bug.c  cmpeq.c  control.c  funcptr.c  locals.c  matmul.c  switch.c
tests/parsetree/: assign1.c  assign2.c  binop1.c  call1.c  cast1.c  conditional1.c  for1.c  init1.c  label1.c  literals.c  switch1.c  switch2.c
tests/picoc/: 00_assignment.c  00_assignment.lin  00_assignment.ll  01_comment.c  01_comment.lin  01_comment.ll  02_printf.c  02_printf.lin  02_printf.ll  03_struct.c  03_struct.lin  03_struct.ll  04_for.c  04_for.lin  04_for.ll  05_array.c  05_array.lin  05_array.ll  06_case.c  06_case.lin  06_case.ll  07_function.c  07_function.lin  07_function.ll  08_while.c  08_while.lin  08_while.ll  09_do_while.c  09_do_while.lin  09_do_while.ll  10_pointer.c  10_pointer.lin  10_pointer.ll  11_precedence.c  11_precedence.lin  11_precedence.ll  12_hashdefine.c  12_hashdefine.lin  12_hashdefine.ll  13_integer_literals.c  (+76 more)
tests/set1/: README.md  cq2.c  crash1.c  crash1.expect  crash1.lin  crash1.ll  expect  fpcast1.c  fpcast1.expect  fpcast1.lin  fpcast1.ll  funcptr1.c  funcptr1.lin  funcptr1.ll  funcptr2.c  funcptr2.lin  funcptr2.ll  funcptr3.c  funcptr3.lin  funcptr3.ll  globals1.c  globals1.lin  globals1.ll  init1.c  init1.expect  init1.lin  init1.ll  initializers1.c  initializers1.lin  initializers1.ll  initializers2.c  initializers3.c  locals1.c  locals1.lin  locals1.ll  locals2.c  locals2.lin  locals2.ll  matmul.c  matmul.expect  (+58 more)
tests/sqlite/: README.md
tests/unsupported/: README.md  initializers1.c  initializers2.c  stdarg.c
(+12 files in other folders)
